# sem_keypts_dataset_generator

./: CMakeLists.txt  package.xml
include/dataset_generator/: dataset_generator.h
include/image_processor/: image_processor.h
launch/: process.launch
src/: dataset_generator.cpp  dataset_generator_node.cpp  image_processor.cpp  image_processor_node.cpp
transfer/: sem_kpts_dataset_tuning_params.ods
